Stylize section one
Probably trying to get a little too close to the detail.
While it isn't recomended, it feels much better when things
line up exactly.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
     <div class="header">
     </div>
     <div class="section-one">
+        <div class="one-title">Some random information.</div>
+        <div class="one-content">
+            <div class="info">
+                <div class="one-image"><img src="" alt="empty spot for image"></div>
+                <div class="one-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="one-image"><img src="" alt="empty spot for image"></div>
+                <div class="one-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="one-image"><img src="" alt="empty spot for image"></div>
+                <div class="one-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="one-image"><img src="" alt="empty spot for image"></div>
+                <div class="one-text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
     <div class="section-two">
         <div class="section-two-content">
