--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 </head>
 <body>
     <div class="header">
+        <div class="header-top">
+            <div class="logo">Header Logo</div>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+        <div class="hero">
+            <div class="hero-content">
+                <div class="hero-title">This website is awesome</div>
+                <div class="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <div class="hero-image"><img href="#" alt="empty spot for image"></div>
+        </div>
     </div>
     <div class="section-one">
         <div class="one-title">Some random information.</div>
